deploy: 88ff46746aaf6e12b9db3addc29fb973935153e6

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
 <h1 class=list-title>code is art.</h1>
 <h2 class=homepage-link-title>Latest Article</h2>
 <section class="latest-page-item homepage-item">
-<a href=https://quobix.com/articles/experience-engineering/>
-<img src=https://quobix.com/images/hero-images/experience-engineering.png class=article-hero-thumb alt="UX, UI, and DX are all a part of experience engineering" title="When it's so easy to use, you don't even know it exists.">
+<a href=https://quobix.com/articles/trashbox/>
+<img src=https://quobix.com/images/hero-images/trashbox.png class=article-hero-thumb alt="UX, UI, and DX are all a part of experience engineering." title="'Did you remember the Trash?'... oh no, not again.">
 <span class=screen-reader>
-What is Experience Engineering?
+TrashBox, Engineering a solution to memory loss.
 </span>
 </a>
 <section>
-<h3><a href=https://quobix.com/articles/experience-engineering/>What is Experience Engineering?</a></h2>
+<h3><a href=https://quobix.com/articles/trashbox/>TrashBox, Engineering a solution to memory loss.</a></h2>
 <p>
-Building the big red easy button, UI, UX, DX, API, CLI SDK all have experience engineering in common, but what exactly is it?
+Two problems plague my life, misplacing my phone and forgetting to take out the trash. I solved both issues with one black box.
 </p>
 <sub>
-Sep 26, 2021 | 8 minute
+Sep 30, 2021 | 7 minute
 read
 </sub>
 </section>
