deploy: 0818c5bc8c6abfec5a12af705123a99f6f9006f8

--- a/404.html
+++ b/404.html
@@ -69,17 +69,17 @@
 <em>What you're looking for, cannot be found here.</em>
 </div><hr>
 <p>Instead, why not check out some other content instead, or you can <a href=https://quobix.com/>head to the homepage.</a></p><h2 class=homepage-link-title>Latest Article</h2><section class="latest-page-item homepage-item">
-<a href=https://quobix.com/articles/hello-splunk/>
-<img src=https://quobix.com/images/hero-images/hello-splunk.png class=article-hero-thumb alt="Image of buttercup the pony, next to the words 'hello splunk'" title="A whole new world, with a familiar twist.">
+<a href=https://quobix.com/articles/impostor-syndrome/>
+<img src=https://quobix.com/images/hero-images/impostor-syndrome.png class=article-hero-thumb alt="Image of buttercup the pony, next to the words 'hello splunk'" title="Ever feel like you're playing [among us](https://en.wikipedia.org/wiki/Among_Us) with your career?">
 <span class=screen-reader>
-Hello, Splunk!
+How to beat Impostor Syndrome
 </span>
 </a>
 <section>
-<h3><a href=https://quobix.com/articles/hello-splunk/>Hello, Splunk!</a></h2><p>
-New job, new domain, time to buckle-up buttercup
+<h3><a href=https://quobix.com/articles/impostor-syndrome/>How to beat Impostor Syndrome</a></h2><p>
+Have you ever felt like a fraud? Like someone will &lsquo;find out&rsquo; you&rsquo;re not as smart as they think you are? Ever feel way out of your depth? I feel you. Here is how I deal with it and how you can beat it.
 </p><sub>
-Feb 7, 2022 | 1 minute
+Mar 8, 2022 | 6 minute
 read
 </sub>
 </section></section></article></main></div><footer class=footer>
