--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=en>
 <head>
-<meta name=generator content="Hugo 0.93.1">
+<meta name=generator content="Hugo 0.93.3">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"NewsArticle","headline":"code is art.","image":["https:\/\/quobix.com\/images\/hero-images\/home.png"],"datePublished":"2021-09-22 16:35:46 -0400 -0400","author":{"@type":"Person","name":"Dave Shanley","url":"https://quobix.com/author"}}</script>
 <meta charset=utf-8>
 <link rel=apple-touch-icon sizes=180x180 href=https://quobix.com//apple-touch-icon.png>
@@ -68,17 +68,17 @@
 <article class=framed-content>
 <img src=https://quobix.com/images/quobix-homepage.png alt="quobix logo" title="quobix logo" width=800 class=homepage-logo>
 <h1 class="list-title homepage-title">code is art.</h1><h2 class=homepage-link-title>Latest Article</h2><section class="latest-page-item homepage-item">
-<a href=https://quobix.com/articles/hello-splunk/>
-<img src=https://quobix.com/images/hero-images/hello-splunk.png class=article-hero-thumb alt="Image of buttercup the pony, next to the words 'hello splunk'" title="A whole new world, with a familiar twist.">
+<a href=https://quobix.com/articles/impostor-syndrome/>
+<img src=https://quobix.com/images/hero-images/impostor-syndrome.png class=article-hero-thumb alt="Image of buttercup the pony, next to the words 'hello splunk'" title="Ever feel like you're playing [among us](https://en.wikipedia.org/wiki/Among_Us) with your career?">
 <span class=screen-reader>
-Hello, Splunk!
+How to beat Impostor Syndrome
 </span>
 </a>
 <section>
-<h3><a href=https://quobix.com/articles/hello-splunk/>Hello, Splunk!</a></h2><p>
-New job, new domain, time to buckle-up buttercup
+<h3><a href=https://quobix.com/articles/impostor-syndrome/>How to beat Impostor Syndrome</a></h2><p>
+Have you ever felt like a fraud? Like someone will &lsquo;find out&rsquo; you&rsquo;re not as smart as they think you are? Ever feel way out of your depth? I feel you. Here is how I deal with it and how you can beat it.
 </p><sub>
-Feb 7, 2022 | 1 minute
+Mar 8, 2022 | 6 minute
 read
 </sub>
 </section></section><p><a href=https://quobix.com/articles/>Read more articles ></a></p></article></main></div><footer class=footer>
