--- a/404.html
+++ b/404.html
@@ -1,88 +1,8 @@
-<!doctype html><html lang=en>
-<head>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"NewsArticle","headline":"404 Page not found","image":["https:\/\/quobix.com\/"],"datePublished":"0001-01-01 00:00:00 \u002b0000 UTC","author":{"@type":"Person","name":"Dave Shanley","url":"https://quobix.com/author"}}</script>
-<meta charset=utf-8>
-<link rel=apple-touch-icon sizes=180x180 href=https://quobix.com//apple-touch-icon.png>
-<link rel=icon type=image/png sizes=32x32 href=https://quobix.com/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=https://quobix.com/favicon-16x16.png>
-<meta name=description content="quobix.com, home of Dave Shanley">
-<meta charset=utf-8>
-<meta name=keywords content="dave shanley,shanley,code,golang,java,typescript,quobix,engineer">
-<link crossorigin=use-credentials rel=manifest href=https://quobix.com/site.webmanifest>
-<meta name=author content="Dave Shanley">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<title>quobix: 404 Page not found</title><script>(function(t,s,o,e,a){t[e]=t[e]||[],t[e].push({'gtm.start':(new Date).getTime(),event:"gtm.js"});var i=s.getElementsByTagName(o)[0],n=s.createElement(o),r=e!="dataLayer"?"&l="+e:'';n.async=!0,n.src="https://www.googletagmanager.com/gtm.js?id="+a+r,i.parentNode.insertBefore(n,i)})(window,document,"script","dataLayer","GTM-PC979K2")</script>
-<script src=https://quobix.com/assets/bundle.js></script>
-<style>:root{--global-font-size:17px;--global-line-height:1.4em;--global-space:10px;--font-stack:Menlo, Monaco, Lucida Console, Liberation Mono,
+<!doctype html><html lang=en><head><script type=application/ld+json>{"@context":"https://schema.org","@type":"NewsArticle","headline":"404 Page not found","image":["https:\/\/quobix.com\/"],"datePublished":"0001-01-01 00:00:00 \u002b0000 UTC","author":{"@type":"Person","name":"Dave Shanley","url":"https://quobix.com/author"}}</script><meta charset=utf-8><link rel=apple-touch-icon sizes=180x180 href=https://quobix.com//apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=https://quobix.com/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=https://quobix.com/favicon-16x16.png><meta name=description content="quobix.com, home of Dave Shanley"><meta charset=utf-8><meta name=keywords content="dave shanley,shanley,code,golang,java,typescript,quobix,engineer"><link crossorigin=use-credentials rel=manifest href=https://quobix.com/site.webmanifest><meta name=author content="Dave Shanley"><meta name=viewport content="width=device-width,initial-scale=1"><title>quobix: 404 Page not found</title><script>(function(t,s,o,e,a){t[e]=t[e]||[],t[e].push({'gtm.start':(new Date).getTime(),event:"gtm.js"});var i=s.getElementsByTagName(o)[0],n=s.createElement(o),r=e!="dataLayer"?"&l="+e:'';n.async=!0,n.src="https://www.googletagmanager.com/gtm.js?id="+a+r,i.parentNode.insertBefore(n,i)})(window,document,"script","dataLayer","GTM-PC979K2")</script><script src=https://quobix.com/assets/bundle.js></script><style>:root{--global-font-size:17px;--global-line-height:1.4em;--global-space:10px;--font-stack:Menlo, Monaco, Lucida Console, Liberation Mono,
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
             serif;--mono-font-stack:Menlo, Monaco, Lucida Console, Liberation Mono,
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
-            serif;--background-color:#0d1117;--page-width:65em;--font-color:#e8e9ed;--invert-font-color:#222225;--secondary-color:#b685ff;--tertiary-color:#a3abba;--primary-color:#62c4ff;--error-color:#ff3c74;--progress-bar-background:#3f3f44;--progress-bar-fill:#62c4ff;--code-bg-color:none;--input-style:solid;--display-h1-decoration:none;--bold-text:#e397fa;--terminal-green:#00FF00FF;--hrcolor:#3d3d3d;--code-border:#525252}</style><link rel=stylesheet href=https://quobix.com/assets/syntax.css>
-<link rel=stylesheet href=https://quobix.com/assets/app.css>
-<meta property="og:locale" content="en_US">
-<meta property="og:type" content="website">
-<meta property="og:title" content="404 Page not found">
-<meta property="og:description" content>
-<meta property="og:publish_date" content="0001-01-01 00:00:00 +0000 UTC">
-<meta property="og:url" content="https://quobix.com/404.html">
-<meta property="og:site_name" content="quobix">
-<meta property="og:image" content="https://quobix.com/">
-<meta property="og:image:width" content="1400">
-<meta property="og:image:height" content="680">
-<meta property="og:image:secure_url" content="https://quobix.com/">
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:alt" content>
-<meta property="article:author" content="https://quobix.com">
-<meta property="article:publisher" content="https://quobix.com">
-<meta property="article:section" content="Software">
-<meta property="article:published_time" content="0001-01-01 00:00:00 +0000 UTC">
-<meta property="article:modified_time" content="0001-01-01 00:00:00 +0000 UTC">
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:site content="@daveshanley">
-<meta name=twitter:creator content="@daveshanley">
-<meta name=twitter:label1 content="Written by">
-<meta name=twitter:data1 content="Dave Shanley">
-<meta name=twitter:label2 content="Reading time">
-<meta name=twitter:data2 content="0 minutes">
-</head><body class=terminal>
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC979K2" height=0 width=0 style=display:none;visibility:hidden></iframe></noscript><div class=quobix-header>
-<section class=terminal-nav id=main-navigation>
-<header class=terminal-logo>
-<div class="logo terminal-prompt"><a href=https://quobix.com/>quobix</a></div></header><nav class=terminal-menu id=header-menu>
-<ul itemscope itemtype=http://schema.org/BreadcrumbList>
-<li itemprop=itemListElement itemscope itemtype=http://schema.org/ListItem>
-<a href=https://quobix.com/articles/ itemprop=item class=menu-item>
-<span itemprop=name>Articles</span>
-<meta itemprop=position content="1">
-</a>
-</li><li itemprop=itemListElement itemscope itemtype=http://schema.org/ListItem>
-<a href=https://quobix.com/author/ itemprop=item class=menu-item>
-<span itemprop=name>Author</span>
-<meta itemprop=position content="2">
-</a>
-</li></ul></nav></section><hr id=top-nav-divider>
-</div><div class=container>
-<div class=main-container>
-<main class=content-container>
-<article class=framed-content>
-<h1 class=about-title>404 My Friend.</h1><div class=about-strapline>
-<em>What you're looking for, cannot be found here.</em>
-</div><hr>
-<p>Instead, why not check out some other content instead, or you can <a href=https://quobix.com/>head to the homepage.</a></p><h2 class=homepage-link-title>Latest Article</h2><section class="latest-page-item homepage-item">
-<a href=https://quobix.com/articles/impostor-syndrome/>
-<img src=https://quobix.com/images/hero-images/impostor-syndrome.png class=article-hero-thumb alt="Image of buttercup the pony, next to the words 'hello splunk'" title="Ever feel like you're playing [among us](https://en.wikipedia.org/wiki/Among_Us) with your career?">
-<span class=screen-reader>
-How to beat Impostor Syndrome
-</span>
-</a>
-<section>
-<h3><a href=https://quobix.com/articles/impostor-syndrome/>How to beat Impostor Syndrome</a></h2><p>
-Have you ever felt like a fraud? Like someone will &lsquo;find out&rsquo; you&rsquo;re not as smart as they think you are? Ever feel way out of your depth? I feel you. Here is how I deal with it and how you can beat it.
-</p><sub>
-Mar 8, 2022 | 6 minute
-read
-</sub>
-</section></section></article></main></div><footer class=footer>
-<a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
-<span class=generated-timestamp>[generated 08/03/22 21:33 UTC]</span>
-</footer></div></body></html>
+            serif;--background-color:#0d1117;--page-width:65em;--font-color:#e8e9ed;--invert-font-color:#222225;--secondary-color:#b685ff;--tertiary-color:#a3abba;--primary-color:#62c4ff;--error-color:#ff3c74;--progress-bar-background:#3f3f44;--progress-bar-fill:#62c4ff;--code-bg-color:none;--input-style:solid;--display-h1-decoration:none;--bold-text:#e397fa;--terminal-green:#00FF00FF;--hrcolor:#3d3d3d;--code-border:#525252}</style><link rel=stylesheet href=https://quobix.com/assets/syntax.css><link rel=stylesheet href=https://quobix.com/assets/app.css><meta property="og:locale" content="en_US"><meta property="og:type" content="website"><meta property="og:title" content="404 Page not found"><meta property="og:description" content><meta property="og:publish_date" content="0001-01-01 00:00:00 +0000 UTC"><meta property="og:url" content="https://quobix.com/404.html"><meta property="og:site_name" content="quobix"><meta property="og:image" content="https://quobix.com/"><meta property="og:image:width" content="1400"><meta property="og:image:height" content="680"><meta property="og:image:secure_url" content="https://quobix.com/"><meta property="og:image:type" content="image/png"><meta property="og:image:alt" content><meta property="article:author" content="https://quobix.com"><meta property="article:publisher" content="https://quobix.com"><meta property="article:section" content="Software"><meta property="article:published_time" content="0001-01-01 00:00:00 +0000 UTC"><meta property="article:modified_time" content="0001-01-01 00:00:00 +0000 UTC"><meta name=twitter:card content="summary_large_image"><meta name=twitter:site content="@daveshanley"><meta name=twitter:creator content="@daveshanley"><meta name=twitter:label1 content="Written by"><meta name=twitter:data1 content="Dave Shanley"><meta name=twitter:label2 content="Reading time"><meta name=twitter:data2 content="0 minutes"></head><body class=terminal><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC979K2" height=0 width=0 style=display:none;visibility:hidden></iframe></noscript><div class=quobix-header><section class=terminal-nav id=main-navigation><header class=terminal-logo><div class="logo terminal-prompt"><a href=https://quobix.com/>quobix</a></div></header><nav class=terminal-menu id=header-menu><ul itemscope itemtype=http://schema.org/BreadcrumbList><li itemprop=itemListElement itemscope itemtype=http://schema.org/ListItem><a href=https://quobix.com/articles/ itemprop=item class=menu-item><span itemprop=name>Articles</span><meta itemprop=position content="1"></a></li><li itemprop=itemListElement itemscope itemtype=http://schema.org/ListItem><a href=https://quobix.com/author/ itemprop=item class=menu-item><span itemprop=name>Author</span><meta itemprop=position content="2"></a></li></ul></nav></section><hr id=top-nav-divider></div><div class=container><div class=main-container><main class=content-container><article class=framed-content><h1 class=about-title>404 My Friend.</h1><div class=about-strapline><em>What you're looking for, cannot be found here.</em></div><hr><p>Instead, why not check out some other content instead, or you can <a href=https://quobix.com/>head to the homepage.</a></p><h2 class=homepage-link-title>Latest Article</h2><section class="latest-page-item homepage-item"><a href=https://quobix.com/articles/impostor-syndrome/><img src=https://quobix.com/images/hero-images/impostor-syndrome.png class=article-hero-thumb alt="Image of buttercup the pony, next to the words 'hello splunk'" title="Ever feel like you're playing [among us](https://en.wikipedia.org/wiki/Among_Us) with your career?">
+<span class=screen-reader>How to beat Impostor Syndrome</span></a><section><h3><a href=https://quobix.com/articles/impostor-syndrome/>How to beat Impostor Syndrome</a></h2><p>Have you ever felt like a fraud? Like someone will &lsquo;find out&rsquo; you&rsquo;re not as smart as they think you are? Ever feel way out of your depth? I feel you. Here is how I deal with it and how you can beat it.</p><sub>Mar 8, 2022 | 6 minute
+read</sub></section></section></article></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
+<span class=generated-timestamp>[generated 23/03/22 19:46 UTC]</span></footer></div></body></html>
