deploy: 00295d28a4465af1e335ea2bc557da566a24f754

--- a/vacuum/rules/operations/index.html
+++ b/vacuum/rules/operations/index.html
@@ -10,5 +10,7 @@
 <rule-item severity=error name=operation-operationId-unique url=https://quobix.com/vacuum/rules/operations/operation-operationid-unique/ description="Check every operation for an operationId that is unique
 " formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-operationid-unique/>operation-operationId-unique</a></rule-item>
 <rule-item severity=error name=operation-parameters url=https://quobix.com/vacuum/rules/operations/operation-parameters/ description="Check operations parameters are unique and non-repeating
-" formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-parameters/>operation-parameters</a></rule-item></section></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
-<span class=generated-timestamp>[generated 23/06/22 15:51 UTC]</span></footer></div></body></html>
+" formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-parameters/>operation-parameters</a></rule-item>
+<rule-item severity=warn name=operation-singular-tag url=https://quobix.com/vacuum/rules/operations/operation-singular-tag/ description="Check operations only contain a single tag
+" formats=oas3,oas2 ruletype=style><a href=https://quobix.com/vacuum/rules/operations/operation-singular-tag/>operation-singular-tag</a></rule-item></section></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
+<span class=generated-timestamp>[generated 24/06/22 20:03 UTC]</span></footer></div></body></html>
