deploy: 88a40b46626d048f67606ddbb5c032623325ff7c

--- a/vacuum/rules/operations/index.html
+++ b/vacuum/rules/operations/index.html
@@ -15,5 +15,7 @@ common faults, bugs and mis-configurations.</section><hr><section class=list><ru
 <rule-item severity=warn name=operation-singular-tag url=https://quobix.com/vacuum/rules/operations/operation-singular-tag/ description="Check operations only contain a single tag
 " formats=oas3,oas2 ruletype=style><a href=https://quobix.com/vacuum/rules/operations/operation-singular-tag/>operation-singular-tag</a></rule-item>
 <rule-item severity=error name=operation-tag-defined url=https://quobix.com/vacuum/rules/operations/operation-tag-defined/ description="Check tags used in operations are defined in the global context of the specification
-" formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-tag-defined/>operation-tag-defined</a></rule-item></section></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
-<span class=generated-timestamp>[generated 24/06/22 20:36 UTC]</span></footer></div></body></html>
+" formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-tag-defined/>operation-tag-defined</a></rule-item>
+<rule-item severity=error name=path-params url=https://quobix.com/vacuum/rules/operations/path-params/ description="Check all variations of an operation's path parameters are correct.
+" formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/path-params/>path-params</a></rule-item></section></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
+<span class=generated-timestamp>[generated 25/06/22 15:51 UTC]</span></footer></div></body></html>
