deploy: 10d8bd6d83e4c819ca932db3297f0563faced5aa

--- a/vacuum/rules/information/index.html
+++ b/vacuum/rules/information/index.html
@@ -9,6 +9,10 @@ These rules check to confirm required details have been completed.</section><hr>
 " formats=oas3,oas2 ruletype=validation><a href=https://quobix.com/vacuum/rules/information/contact-properties/>contact-properties</a></rule-item>
 <rule-item severity=info name=info-contact url=https://quobix.com/vacuum/rules/information/info-contact/ description="Checks specification has defined contact details.
 " formats=oas3,oas2 ruletype=validation><a href=https://quobix.com/vacuum/rules/information/info-contact/>info-contact</a></rule-item>
-<rule-item severity=info name=info-description url=https://quobix.com/vacuum/rules/information/info-description/ description="Checks specification has defined a description
-" formats=oas3,oas2 ruletype=validation><a href=https://quobix.com/vacuum/rules/information/info-description/>info-description</a></rule-item></section></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
-<span class=generated-timestamp>[generated 25/06/22 17:22 UTC]</span></footer></div></body></html>
+<rule-item severity=error name=info-description url=https://quobix.com/vacuum/rules/information/info-description/ description="Checks specification has defined a description.
+" formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/information/info-description/>info-description</a></rule-item>
+<rule-item severity=info name=info-license url=https://quobix.com/vacuum/rules/information/info-license/ description="Checks specification has defined a license.
+" formats=oas3,oas2 ruletype=style><a href=https://quobix.com/vacuum/rules/information/info-license/>info-license</a></rule-item>
+<rule-item severity=info name=license-url url=https://quobix.com/vacuum/rules/information/license-url/ description="Checks specification license includes a URL.
+" formats=oas3,oas2 ruletype=style><a href=https://quobix.com/vacuum/rules/information/license-url/>license-url</a></rule-item></section></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
+<span class=generated-timestamp>[generated 25/06/22 17:37 UTC]</span></footer></div></body></html>
