--- a/vacuum/functions/openapi/oasdescriptions/index.html
+++ b/vacuum/functions/openapi/oasdescriptions/index.html
@@ -10,6 +10,7 @@
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>description</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;Operations should have at least 5 words&#34;</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>type</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;validation&#34;</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>recommended</span><span class=p>:</span><span class=w> </span><span class=kc>true</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>severity</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;warn&#34;</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>given</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;$&#34;</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>then</span><span class=p>:</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>    </span><span class=nt>function</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;oasDescriptions&#34;</span><span class=w>
@@ -17,4 +18,4 @@
 </span></span></span><span class=line><span class=cl><span class=w>      </span><span class=nt>minWords</span><span class=p>:</span><span class=w> </span><span class=m>5</span><span class=w>
 </span></span></span></code></pre></div><p>The function is used by
 the <a href=https://quobix.com/vacuum/rules/descriptions/operation-description/>operation-descriptions</a> Rule</p><hr><p><a href=https://github.com/daveshanley/vacuum/blob/main/functions/openapi/operation_parameters.go>View Function Source</a></p></section><hr class=function-hr><section class=rule-footer-navigation><nav><span><a href=https://quobix.com/vacuum/functions/openapi/>&lt; Back to OpenAPI Functions</a></span></nav></section></article></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
-<span class=generated-timestamp>[generated 27/06/22 13:58 UTC]</span></footer></div></body></html>
+<span class=generated-timestamp>[generated 27/06/22 15:04 UTC]</span></footer></div></body></html>
