deploy: bb5c7c72a8ab751c96701675ee5a1d60a3a90c8f

--- a/vacuum/rules/operations/index.html
+++ b/vacuum/rules/operations/index.html
@@ -10,6 +10,8 @@ common faults, bugs and mis-configurations.</section><hr><section class=list><ru
 " formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/path-declarations-must-exist/>path-declarations-must-exist</a></rule-item>
 <rule-item severity=error name=path-keys-no-trailing-slash url=https://quobix.com/vacuum/rules/operations/path-keys-no-trailing-slash/ description="Path definitions cannot contain a trailing slash.
 " formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/path-keys-no-trailing-slash/>path-keys-no-trailing-slash</a></rule-item>
+<rule-item severity=error name=path-not-include-query url=https://quobix.com/vacuum/rules/operations/path-not-include-query/ description="Path definition can't contain a query parameter.
+" formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/path-not-include-query/>path-not-include-query</a></rule-item>
 <rule-item severity=error name=operation-operationId-valid-in-url url=https://quobix.com/vacuum/rules/operations/operation-operationid-valid-in-url/ description="Check that an operationId is valid when used in URL
 " formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-operationid-valid-in-url/>operation-operationId-valid-in-url</a></rule-item>
 <rule-item severity=warn name=operation-success-response url=https://quobix.com/vacuum/rules/operations/operation-success-response/ description="Operations must return a 'success' response code." formats=oas3,oas2 ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-success-response/>operation-success-response</a></rule-item>
@@ -25,4 +27,4 @@ common faults, bugs and mis-configurations.</section><hr><section class=list><ru
 " formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/operation-tag-defined/>operation-tag-defined</a></rule-item>
 <rule-item severity=error name=path-params url=https://quobix.com/vacuum/rules/operations/path-params/ description="Check all variations of an operation's path parameters are correct.
 " formats=oas3,oas2 recommended ruletype=validation><a href=https://quobix.com/vacuum/rules/operations/path-params/>path-params</a></rule-item></section></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
-<span class=generated-timestamp>[generated 29/06/22 11:16 UTC]</span></footer></div></body></html>
+<span class=generated-timestamp>[generated 29/06/22 11:33 UTC]</span></footer></div></body></html>
