--- a/vacuum/functions/openapi/oas2polymorphicanyof/index.html
+++ b/vacuum/functions/openapi/oas2polymorphicanyof/index.html
@@ -15,7 +15,7 @@ it has not made use of <a href=https://json-schema.org/understanding-json-schema
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>severity</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;err&#34;</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>given</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;$&#34;</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nt>then</span><span class=p>:</span><span class=w>
-</span></span></span><span class=line><span class=cl><span class=w>    </span><span class=nt>function</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;oasPolymorphicOneOf&#34;</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>    </span><span class=nt>function</span><span class=p>:</span><span class=w> </span><span class=s2>&#34;oas2PolymorphicAnyOf&#34;</span><span class=w>
 </span></span></span></code></pre></div><p>The function is used by
 the <a href=https://quobix.com/vacuum/rules/schemas/oas2-anyof/>oas2-anyOf</a> Rule</p><hr><p><a href=https://github.com/daveshanley/vacuum/blob/main/functions/openapi/polymorphic_anyOf.go>View Function Source</a></p></section><hr class=function-hr><section class=rule-footer-navigation><nav><span><a href=https://quobix.com/vacuum/functions/openapi/>&lt; Back to OpenAPI Functions</a></span></nav></section></article></section></main></div><footer class=footer><a href=https://quobix.com/author>Dave Shanley</a> 2007-2022
-<span class=generated-timestamp>[generated 29/06/22 15:20 UTC]</span></footer></div></body></html>
+<span class=generated-timestamp>[generated 29/06/22 15:37 UTC]</span></footer></div></body></html>
